<resources>
<!-- AUTO-GENERATED -->
<string name="downloading">Downloading &#8230;</string>
<string name="uploading">Uploading &#8230;</string>
<string name="saved_date">Saved date</string>
<string name="download">Download</string>
<string name="upload">Upload</string>
<string name="use">Use</string>
<string name="current_save_on_device">This file is the current available game on your device</string>
<string name="app_name">Fallout Shelter Sync</string>
<string name="update">App page / Update</string>
<string name="codlab">Codlab\'s Website</string>
<string name="tab_slot_1">Slot 1</string>
<string name="tab_slot_2">Slot 2</string>
<string name="tab_slot_3">Slot 3</string>
<string name="foreground_title">Fallout Shelter Synchronisation</string>
<string name="foreground_text">Waiting for new save edited</string>
<string name="upload_title">New save game ready to upload</string>
<string name="upload_text">Send the save game to Google Drive ?</string>
<string name="upload_cancel">Cancel</string>
<string name="upload_upload">Upload</string>
</resources>