<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/slot_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/saved_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download" />

    <Button
        android:id="@+id/use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use" />
</LinearLayout>